# ChangeLog for app-emulation/wine
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/wine/ChangeLog,v 1.396 2012/01/14 03:30:58 tetromino Exp $

*wine-1.3.37 (14 Jan 2012)

  14 Jan 2012; Alexandre Rostovtsev <tetromino@gentoo.org> +wine-1.3.37.ebuild:
  Version bump, see http://www.winehq.org/announce/1.3.37 for the announcement.

  14 Jan 2012; Alexandre Rostovtsev <tetromino@gentoo.org> wine-1.2.ebuild,
  wine-1.2.1.ebuild, wine-1.2.2.ebuild, wine-1.2.3.ebuild, wine-1.3.0.ebuild,
  wine-1.3.1.ebuild, wine-1.3.2.ebuild, wine-1.3.3.ebuild, wine-1.3.4.ebuild,
  wine-1.3.5.ebuild, wine-1.3.6.ebuild, wine-1.3.7.ebuild, wine-1.3.8.ebuild,
  wine-1.3.9.ebuild, wine-1.3.10.ebuild, wine-1.3.11.ebuild,
  wine-1.3.12.ebuild, wine-1.3.13.ebuild, wine-1.3.14.ebuild,
  wine-1.3.15.ebuild, wine-1.3.16.ebuild, wine-1.3.17.ebuild,
  wine-1.3.18.ebuild, wine-1.3.19.ebuild, wine-1.3.20.ebuild,
  wine-1.3.21.ebuild, wine-1.3.22.ebuild, wine-1.3.23.ebuild,
  wine-1.3.24.ebuild, wine-1.3.25.ebuild, wine-1.3.26.ebuild,
  wine-1.3.27.ebuild, wine-1.3.28.ebuild, wine-1.3.29.ebuild,
  wine-1.3.30.ebuild, wine-1.3.31.ebuild, wine-1.3.32.ebuild,
  wine-1.3.33.ebuild, wine-1.3.34.ebuild, wine-1.3.35.ebuild,
  wine-1.3.36.ebuild, wine-9999.ebuild:
  Update to EAPI4 and require USE=threads on glibc-based systems (bug #286560,
  #396395, and other duplicates). Drop esd support since media-sound/esound has
  been masked for removal.

  13 Jan 2012; Alexandre Rostovtsev <tetromino@gentoo.org> wine-1.2.3.ebuild,
  +files/wine-1.2.3-msxml3-libxml2-headers.patch:
  Add patch from 1.3.15 that reorders #includes in msxml3 to fix building with
  libxml2[icu] (bug #397993, thanks to Marcin Szamotulski for reporting).

  31 Dec 2011; Alexandre Rostovtsev <tetromino@gentoo.org> wine-9999.ebuild:
  Sync with dbus/udisks USE flag update in 1.3.36.

*wine-1.3.36 (31 Dec 2011)
