@@ -45,6 +45,7 @@ DIST wine-1.3.6.tar.bz2 18243096 RMD160 d1f9f1dade12f878e90fa01f5a59cc13056d8b06
 DIST wine-1.3.7.tar.bz2 18379692 RMD160 316535442fc2f29d30a2952ff612cc70ae9f19c9 SHA1 3f46e6d73e4917d13fbc102e6f35aba9b9412a40 SHA256 13cf54ec8b83d49abd6888b543ab359661d70af9df3e30ab70d7e54b6b5cd025
 DIST wine-1.3.8.tar.bz2 18315298 RMD160 1b579d124523fe4698431c8de11f4cdfa3034821 SHA1 d36e7d8c0d8d5e2f86d47b175e197e9623660495 SHA256 6eebf60c143cbe4328a8566331a6b887cf8612000f051e55d4b9d99e6a17bfdb
 DIST wine-1.3.9.tar.bz2 18378516 RMD160 07803597faf46e9ac748560642a537b56dd1a845 SHA1 68f2172b3cd7674e0f7bb746eae065a7b542db9f SHA256 a920b0805814d53435fdc575efe618b39c2b18d30af416f80d2fb4763d2587fa
+DIST wine-1.4-rc1.tar.bz2 19901330 RMD160 249f42a1736b405ed11031a9bdc62bb3c55556cf SHA1 aab0c651c018b4861437601af1a7346ab8288c8c SHA256 246618343816ee24ea7be70ac46209ba2a9591717d68af6a22605e6f30ba3bae
 DIST wine_gecko-1.0.0-x86.cab 8119486 RMD160 57618dbffa7b7226dcd44f86c3c569ab8a5ff938 SHA1 afa22c52bca4ca77dcb9edb3c9936eb23793de01 SHA256 7ddf697677506fb164c52771864e32dd69a359ed855b2efbc51340de2376c99c
 DIST wine_gecko-1.1.0-x86.cab 8868851 RMD160 1867734d6ab35f4e66f717789832e69aac06e93b SHA1 1b6c637207b6f032ae8a52841db9659433482714 SHA256 1786e1fd38a0361a3956864f74ebac20452c012316f296ad8d86840e31be0b29
 DIST wine_gecko-1.1.0-x86_64.cab 8940997 RMD160 76364b01b6756db79989feea9de14aeec4ba4675 SHA1 55b4b60cd2a48631d6236fb411c3a94d806d9906 SHA256 b8bea5b6400d191c05b2295c79285309fe331283648457bed48f7e2387773b7a
@@ -99,13 +100,14 @@ EBUILD wine-1.3.6.ebuild 5510 RMD160 c50cdf8d539410c25d08c43dd4d45c6ce576f3c2 SH
 EBUILD wine-1.3.7.ebuild 5510 RMD160 d3ec49932ca26f333251f8bf067de2e8d4aedf4e SHA1 5eae628bfb46e4696aa872b355540c8867ad175a SHA256 523521a5a5ac517d373fbef78fa7552fa6bbfda352611c1284b3fa6777bf8d88
 EBUILD wine-1.3.8.ebuild 5510 RMD160 ad4ef9400c783f96643a6b08903ff61fb44b8159 SHA1 55db95125b39f233f376c4dd164f758fc68a03df SHA256 323b09936524801303e964becdc2279e2e5e417ec2bb5f8d207d38c5137eeb13
 EBUILD wine-1.3.9.ebuild 5568 RMD160 f48129920b292abe3bc6c80a45dc73534401ebf4 SHA1 637b7d7b11cd0390f5ba47e7b24f571ad6d8657f SHA256 0140f2676f9032703a6a809c5e3d2b37a99152e1c2b560548fba26ec3589034b
+EBUILD wine-1.4_rc1.ebuild 5651 RMD160 70e50cf2de6349d3feaa0b715d33817a9a1061b0 SHA1 e23f1fa8a09ab5febb0c7796446d4f035ae94fb6 SHA256 86d3f3f4ffc6be6999cb5334465b43fab925d44e09a71ac5a57b0b8fe836a8bf
 EBUILD wine-9999.ebuild 5536 RMD160 0bc2ec4dd92e9b732b9c3357a61ea47ba6a9b5c1 SHA1 dc719cddd51e9bbd64f27e305453dc34e0aac260 SHA256 fffca90fb089f60b8a0c42fc1be39fe89f8ade22dc524d916c4a08ec0a704a50
-MISC ChangeLog 81700 RMD160 e72ee3fbcaf55d181bf01433492ee8e87c000c26 SHA1 ab8512845d107aae8c88c556b5795985953bc473 SHA256 71c467188fa3534f669dc9891a8c10a8e4d8faa7f808de612637d11cae44f82f
+MISC ChangeLog 81988 RMD160 bcf28d1964d8f1d9bf990535a6c8d0058d873d09 SHA1 b5a36fbdb369d6dd5f4732eda508f73fedc24a8d SHA256 1a6ec6893747804f9c4215d108ee4e9b0dd626f10094fb94cdd04d2378cef114
 MISC metadata.xml 1558 RMD160 54a67744e1e3b273da447b7501bedbd995de7464 SHA1 831b9f52b00d99bac3f10073c9c59be2fd721542 SHA256 fa58b3b055a5f848f6861fa85ca2d5cb922ba9723a8a26d7e69dd78481209616
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iF4EAREIAAYFAk8Q9vgACgkQdjK8w9WeBnCnDgD+NJ+7+WM/01IDDKulRukU3q2T
-gigQeHeDJPYD/9dgS70A/iuyK8MCCgkpOD1xQVMpDS6g7MiANdJez3skn9a6Ixya
-=OQe/
+iF4EAREIAAYFAk8kUeMACgkQdjK8w9WeBnDWPgD/UE/IYu2Ly+98AEOxiKzHUp0a
+jaqkdgIHNGn9pxOtZ/QA/2jD8nm4CkSohGR4J4EFE1RCKz7l0FNAo37JcJ0fGT6o
+=sp8K
 -----END PGP SIGNATURE-----
