@@ -1,6 +1,14 @@
 # ChangeLog for app-emulation/wine
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/wine/ChangeLog,v 1.396 2012/01/14 03:30:58 tetromino Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/wine/ChangeLog,v 1.397 2012/01/28 19:51:56 tetromino Exp $
+
+*wine-1.4_rc1 (28 Jan 2012)
+
+  28 Jan 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
+  +wine-1.4_rc1.ebuild:
+  Version bump, see http://www.winehq.org/announce/1.4-rc1 for the
+  announcement. Filter -m64 -m32 -mx32 flags for multilib-portage (bug #395615,
+  thanks to Thomas Sachau).
 
 *wine-1.3.37 (14 Jan 2012)
 
